// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Button Primary smoke-test 1`] = `
<div class="grid grid-cols-2 sm:grid-cols-4 gap-4">
  <div class="flex flex-col gap-4">
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-primary-lg"
      >
        Large
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-primary"
      >
        Regular
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-primary-sm"
      >
        Small
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-primary-xs"
      >
        Extra small
      </button>
    </div>
  </div>
  <div class="flex flex-col gap-4">
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-primary-lg ui-button-lg-left-icon"
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class
             style="width: 1.5rem; height: 1.5rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
          >
          </path>
        </svg>
        Large
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-primary ui-button-left-icon"
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class
             style="width: 1.5rem; height: 1.5rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
          >
          </path>
        </svg>
        Regular
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-primary-sm ui-button-sm-left-icon"
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class
             style="width: 1.5rem; height: 1.5rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
          >
          </path>
        </svg>
        Small
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-primary-xs"
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class
             style="width: 1.5rem; height: 1.5rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
          >
          </path>
        </svg>
        Extra small
      </button>
    </div>
  </div>
  <div class="flex flex-col gap-4">
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-primary-lg ui-button-lg-right-icon"
      >
        Large
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class
             style="width: 1.5rem; height: 1.5rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
          >
          </path>
        </svg>
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-primary ui-button-right-icon"
      >
        Regular
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class
             style="width: 1.5rem; height: 1.5rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
          >
          </path>
        </svg>
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-primary-sm ui-button-sm-right-icon"
      >
        Small
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class
             style="width: 1.5rem; height: 1.5rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
          >
          </path>
        </svg>
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-primary-xs"
      >
        Extra small
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class
             style="width: 1.5rem; height: 1.5rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
          >
          </path>
        </svg>
      </button>
    </div>
  </div>
  <div class="flex flex-col gap-4">
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-primary-lg"
              disabled
      >
        Large
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-primary"
              disabled
      >
        Regular
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-primary-sm"
              disabled
      >
        Small
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-primary-xs"
              disabled
      >
        Extra small
      </button>
    </div>
  </div>
</div>
`;

exports[`Components/Button Priority smoke-test 1`] = `
<div class="grid grid-cols-2 sm:grid-cols-4 gap-4">
  <div class="flex flex-col gap-4">
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-priority-lg"
      >
        Large
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-priority"
      >
        Regular
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-priority-sm"
      >
        Small
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-priority-xs"
      >
        Extra small
      </button>
    </div>
  </div>
  <div class="flex flex-col gap-4">
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-priority-lg ui-button-lg-left-icon"
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class
             style="width: 1.5rem; height: 1.5rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
          >
          </path>
        </svg>
        Large
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-priority ui-button-left-icon"
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class
             style="width: 1.5rem; height: 1.5rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
          >
          </path>
        </svg>
        Regular
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-priority-sm ui-button-sm-left-icon"
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class
             style="width: 1.5rem; height: 1.5rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
          >
          </path>
        </svg>
        Small
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-priority-xs"
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class
             style="width: 1.5rem; height: 1.5rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
          >
          </path>
        </svg>
        Extra small
      </button>
    </div>
  </div>
  <div class="flex flex-col gap-4">
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-priority-lg ui-button-lg-right-icon"
      >
        Large
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class
             style="width: 1.5rem; height: 1.5rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
          >
          </path>
        </svg>
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-priority ui-button-right-icon"
      >
        Regular
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class
             style="width: 1.5rem; height: 1.5rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
          >
          </path>
        </svg>
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-priority-sm ui-button-sm-right-icon"
      >
        Small
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class
             style="width: 1.5rem; height: 1.5rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
          >
          </path>
        </svg>
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-priority-xs"
      >
        Extra small
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class
             style="width: 1.5rem; height: 1.5rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
          >
          </path>
        </svg>
      </button>
    </div>
  </div>
  <div class="flex flex-col gap-4">
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-priority-lg"
              disabled
      >
        Large
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-priority"
              disabled
      >
        Regular
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-priority-sm"
              disabled
      >
        Small
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-priority-xs"
              disabled
      >
        Extra small
      </button>
    </div>
  </div>
</div>
`;

exports[`Components/Button ReactComponent smoke-test 1`] = `
<div class="grid sm:grid-cols-3 gap-4">
  <div>
    <button class="ui-button-priority-lg">
      Hello React!
    </button>
  </div>
  <div>
    <button class="ui-button-primary ui-button-left-icon">
      <svg xmlns="http://www.w3.org/2000/svg"
           fill="none"
           viewbox="0 0 24 24"
           stroke-width="1.5"
           stroke="currentColor"
           aria-hidden="true"
           data-slot="icon"
           class
           style="width: 0.75rem; height: 0.75rem;"
      >
        <path stroke-linecap="round"
              stroke-linejoin="round"
              d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
        >
        </path>
      </svg>
      Hello React!
    </button>
  </div>
  <div>
    <button class="ui-button-secondary-xs">
      Hello React!
      <svg xmlns="http://www.w3.org/2000/svg"
           fill="none"
           viewbox="0 0 24 24"
           stroke-width="1.5"
           stroke="currentColor"
           aria-hidden="true"
           data-slot="icon"
           class
           style="width: 0.75rem; height: 0.75rem;"
      >
        <path stroke-linecap="round"
              stroke-linejoin="round"
              d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
        >
        </path>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Components/Button Secondary smoke-test 1`] = `
<div class="grid grid-cols-2 sm:grid-cols-4 gap-4">
  <div class="flex flex-col gap-4">
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary-lg"
      >
        Large
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary"
      >
        Regular
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary-sm"
      >
        Small
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary-xs"
      >
        Extra small
      </button>
    </div>
  </div>
  <div class="flex flex-col gap-4">
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary-lg ui-button-lg-left-icon"
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class
             style="width: 1.5rem; height: 1.5rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
          >
          </path>
        </svg>
        Large
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary ui-button-left-icon"
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class
             style="width: 1.5rem; height: 1.5rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
          >
          </path>
        </svg>
        Regular
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary-sm ui-button-sm-left-icon"
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class
             style="width: 1.5rem; height: 1.5rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
          >
          </path>
        </svg>
        Small
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary-xs"
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class
             style="width: 1.5rem; height: 1.5rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
          >
          </path>
        </svg>
        Extra small
      </button>
    </div>
  </div>
  <div class="flex flex-col gap-4">
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary-lg ui-button-lg-right-icon"
      >
        Large
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class
             style="width: 1.5rem; height: 1.5rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
          >
          </path>
        </svg>
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary ui-button-right-icon"
      >
        Regular
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class
             style="width: 1.5rem; height: 1.5rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
          >
          </path>
        </svg>
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary-sm ui-button-sm-right-icon"
      >
        Small
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class
             style="width: 1.5rem; height: 1.5rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
          >
          </path>
        </svg>
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary-xs"
      >
        Extra small
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class
             style="width: 1.5rem; height: 1.5rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
          >
          </path>
        </svg>
      </button>
    </div>
  </div>
  <div class="flex flex-col gap-4">
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary-lg"
              disabled
      >
        Large
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary"
              disabled
      >
        Regular
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary-sm"
              disabled
      >
        Small
      </button>
    </div>
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] h-[3.75rem]"
      >
      </button>
      <button type="button"
              class="ui-button-secondary-xs"
              disabled
      >
        Extra small
      </button>
    </div>
  </div>
</div>
`;
